package com.smartlibrary.controller;

import com.smartlibrary.model.*;
import com.smartlibrary.service.LibraryService;
import com.smartlibrary.service.NotificationService;
import com.smartlibrary.service.ReportService;
import com.smartlibrary.service.UserService;
import com.smartlibrary.util.SessionManager;
import com.smartlibrary.util.UiUtil;
import javafx.collections.FXCollections;
import javafx.geometry.Insets;
import javafx.geometry.Pos;
import javafx.scene.Parent;
import javafx.scene.chart.BarChart;
import javafx.scene.chart.CategoryAxis;
import javafx.scene.chart.NumberAxis;
import javafx.scene.chart.PieChart;
import javafx.scene.control.*;
import javafx.scene.control.cell.PropertyValueFactory;
import javafx.scene.image.Image;
import javafx.scene.image.ImageView;
import javafx.scene.layout.*;
import javafx.scene.paint.Color;
import javafx.scene.shape.Rectangle;
import javafx.stage.FileChooser;
import javafx.stage.Stage;

import java.io.File;
import java.io.IOException;
import java.nio.file.Path;
import java.time.format.DateTimeFormatter;
import java.util.List;
import java.util.Map;

public class MainController {
    private final Stage stage;
    private final UserService userService;
    private final LibraryService libraryService;
    private final NotificationService notificationService;
    private final ReportService reportService;
    private final SessionManager sessionManager;
    private final StackPane root = new StackPane();
    private final BorderPane shell = new BorderPane();
    private final VBox sidebar = new VBox(10);
    private final StackPane content = new StackPane();
    private final User currentUser;

    public MainController(Stage stage, UserService userService, LibraryService libraryService,
                          NotificationService notificationService, ReportService reportService,
                          SessionManager sessionManager) {
        this.stage = stage;
        this.userService = userService;
        this.libraryService = libraryService;
        this.notificationService = notificationService;
        this.reportService = reportService;
        this.sessionManager = sessionManager;
        this.currentUser = sessionManager.currentUser().orElseThrow();
        build();
        showDashboard();
    }

    public Parent getView() {
        return root;
    }

    private void build() {
        shell.getStyleClass().add("app-shell");
        sidebar.setPadding(new Insets(24));
        sidebar.getStyleClass().add("sidebar");
        sidebar.setPrefWidth(245);
        Label logo = new Label("Smart Library");
        logo.getStyleClass().add("logo");
        Label role = new Label(currentUser.getRole().displayName());
        role.getStyleClass().add("role-chip");
        sidebar.getChildren().addAll(logo, role, nav("Dashboard", this::showDashboard), nav("Books", this::showBooks));

        if (currentUser.getRole() == Role.ADMIN) {
            sidebar.getChildren().addAll(nav("Users & Staff", this::showUsers), nav("Reports", this::showReports), nav("System Logs", this::showLogs));
        }
        if (currentUser.getRole() == Role.LIBRARIAN || currentUser.getRole() == Role.ADMIN) {
            sidebar.getChildren().addAll(nav("Borrow / Return", this::showBorrowing), nav("Members", this::showMembers), nav("Notifications", this::showNotifications));
        }
        if (currentUser.getRole() == Role.MEMBER) {
            sidebar.getChildren().addAll(nav("My Borrowings", this::showMyLibrary), nav("Reservations", this::showMyReservations), nav("Notifications", this::showNotifications));
        }

        Region spacer = new Region();
        VBox.setVgrow(spacer, Priority.ALWAYS);
        ToggleButton theme = new ToggleButton("Dark mode");
        theme.getStyleClass().add("sidebar-button");
        theme.selectedProperty().addListener((obs, oldValue, dark) -> {
            if (dark) root.getStyleClass().add("dark");
            else root.getStyleClass().remove("dark");
        });
        Button logout = new Button("Logout");
        logout.getStyleClass().add("danger-button");
        logout.setMaxWidth(Double.MAX_VALUE);
        logout.setOnAction(event -> logout());
        sidebar.getChildren().addAll(spacer, theme, logout);

        shell.setLeft(sidebar);
        shell.setCenter(content);
        root.getChildren().setAll(shell);
    }

    private Button nav(String text, Runnable action) {
        Button button = new Button(text);
        button.getStyleClass().add("sidebar-button");
        button.setMaxWidth(Double.MAX_VALUE);
        button.setOnAction(event -> action.run());
        return button;
    }

    private VBox page(String title, String subtitle) {
        VBox page = new VBox(18);
        page.setPadding(new Insets(26));
        page.getStyleClass().add("page");
        Label heading = new Label(title);
        heading.getStyleClass().add("page-title");
        Label sub = new Label(subtitle);
        sub.getStyleClass().add("page-subtitle");
        page.getChildren().addAll(heading, sub);
        return page;
    }

    private void setContent(Parent node) {
        content.getChildren().setAll(node);
        UiUtil.fadeIn(node);
    }

    private void showDashboard() {
        VBox page = page(currentUser.getRole().displayName() + " Dashboard", "Real-time overview tailored to your permissions and daily workflow.");
        DashboardStats stats = libraryService.dashboardStats((int) userService.countActiveUsers(), notificationService.unreadFor(currentUser));
        GridPane cards = new GridPane();
        cards.setHgap(14);
        cards.setVgap(14);
        cards.add(card("Total books", String.valueOf(stats.totalBooks()), "Catalog inventory"), 0, 0);
        cards.add(card("Borrowed", String.valueOf(stats.borrowedBooks()), "Currently issued"), 1, 0);
        cards.add(card("Overdue", String.valueOf(stats.overdueBooks()), "Needs attention"), 2, 0);
        cards.add(card("Active users", String.valueOf(stats.activeUsers()), "Enabled accounts"), 3, 0);
        cards.add(card("Today", String.valueOf(stats.todayBorrowings()), "New borrowings"), 0, 1);
        cards.add(card("Pending returns", String.valueOf(stats.pendingReturns()), "Open loans"), 1, 1);
        cards.add(card("Notifications", String.valueOf(stats.unreadNotifications()), "Unread alerts"), 2, 1);
        cards.add(card("Reservations", String.valueOf(stats.reservations()), "Queue items"), 3, 1);

        HBox analytics = new HBox(16, categoryPie(), borrowedChart(), activityTimeline());
        analytics.setAlignment(Pos.TOP_LEFT);
        page.getChildren().addAll(cards, analytics, quickActions());
        setContent(new ScrollPane(page));
    }

    private VBox card(String title, String value, String subtitle) {
        VBox card = new VBox(8);
        card.getStyleClass().add("stat-card");
        card.setMinSize(185, 116);
        Label t = new Label(title);
        t.getStyleClass().add("stat-title");
        Label v = new Label(value);
        v.getStyleClass().add("stat-value");
        Label s = new Label(subtitle);
        s.getStyleClass().add("stat-subtitle");
        card.getChildren().addAll(t, v, s);
        return card;
    }

    private PieChart categoryPie() {
        PieChart chart = new PieChart();
        chart.setTitle("Catalog by category");
        chart.setLegendVisible(false);
        chart.setPrefSize(270, 250);
        for (Map.Entry<String, Long> item : libraryService.topCategories().entrySet()) {
            chart.getData().add(new PieChart.Data(item.getKey(), item.getValue()));
        }
        chart.getStyleClass().add("panel");
        return chart;
    }

    private BarChart<String, Number> borrowedChart() {
        CategoryAxis x = new CategoryAxis();
        NumberAxis y = new NumberAxis();
        BarChart<String, Number> chart = new BarChart<>(x, y);
        chart.setTitle("Weekly activity");
        chart.setLegendVisible(false);
        chart.setPrefSize(350, 250);
        BarChart.Series<String, Number> series = new BarChart.Series<>();
        series.getData().add(new BarChart.Data<>("Borrow", libraryService.allBorrowings().size()));
        series.getData().add(new BarChart.Data<>("Return", libraryService.allBorrowings().stream().filter(b -> b.getReturnDate() != null).count()));
        series.getData().add(new BarChart.Data<>("Late", libraryService.allBorrowings().stream().filter(b -> b.getDueDate().isBefore(java.time.LocalDate.now()) && b.getReturnDate() == null).count()));
        series.getData().add(new BarChart.Data<>("Reserve", libraryService.allReservations().size()));
        chart.getData().add(series);
        chart.getStyleClass().add("panel");
        return chart;
    }

    private VBox activityTimeline() {
        VBox box = new VBox(10);
        box.getStyleClass().add("panel-box");
        box.setPrefSize(330, 250);
        Label title = new Label("Recent activity");
        title.getStyleClass().add("panel-title");
        box.getChildren().add(title);
        libraryService.logs().stream().limit(5).forEach(log -> {
            Label item = new Label(log.getCreatedAt().format(DateTimeFormatter.ofPattern("HH:mm")) + "  " + log.getAction() + " - " + log.getDetails());
            item.setWrapText(true);
            item.getStyleClass().add("timeline-item");
            box.getChildren().add(item);
        });
        return box;
    }

    private HBox quickActions() {
        HBox actions = new HBox(12);
        actions.setAlignment(Pos.CENTER_LEFT);
        Button books = actionButton("Manage books", this::showBooks);
        Button notifications = actionButton("Send notification", this::showNotifications);
        Button reports = actionButton("Generate report", this::showReports);
        actions.getChildren().addAll(books, notifications, reports);
        return actions;
    }

    private Button actionButton(String label, Runnable action) {
        Button button = new Button(label);
        button.getStyleClass().add("secondary-button");
        button.setOnAction(event -> action.run());
        return button;
    }

    private void showBooks() {
        VBox page = page("Book Catalog", "Advanced search, filtering, QR preview, covers, CSV export, and availability management.");
        TextField search = new TextField();
        search.setPromptText("Search by title, author, or ISBN");
        ComboBox<String> category = new ComboBox<>(FXCollections.observableArrayList(libraryService.categories()));
        category.getSelectionModel().select("All");
        ComboBox<String> status = new ComboBox<>(FXCollections.observableArrayList("All", "Available", "Unavailable"));
        status.getSelectionModel().select("All");
        Button add = actionButton("Add book", () -> bookDialog(null));
        Button export = actionButton("Export CSV", this::exportCsv);
        HBox filters = new HBox(10, search, category, status, add, export);
        filters.setAlignment(Pos.CENTER_LEFT);

        TableView<Book> table = bookTable();
        Runnable refresh = () -> table.setItems(FXCollections.observableArrayList(libraryService.searchBooks(search.getText(), category.getValue(), status.getValue())));
        search.textProperty().addListener((obs, old, value) -> refresh.run());
        category.setOnAction(event -> refresh.run());
        status.setOnAction(event -> refresh.run());
        refresh.run();

        table.setRowFactory(tv -> {
            TableRow<Book> row = new TableRow<>();
            row.setOnMouseClicked(event -> {
                if (event.getClickCount() == 2 && !row.isEmpty() && sessionManager.canManageBooks()) {
                    bookDialog(row.getItem());
                }
            });
            return row;
        });
        page.getChildren().addAll(filters, table);
        setContent(page);
    }

    private TableView<Book> bookTable() {
        TableView<Book> table = new TableView<>();
        table.getStyleClass().add("data-table");
        table.setColumnResizePolicy(TableView.CONSTRAINED_RESIZE_POLICY_ALL_COLUMNS);
        table.getColumns().add(column("Title", "title"));
        table.getColumns().add(column("Author", "author"));
        table.getColumns().add(column("ISBN", "isbn"));
        table.getColumns().add(column("Category", "category"));
        table.getColumns().add(column("Year", "publicationYear"));
        table.getColumns().add(column("Qty", "quantity"));
        table.getColumns().add(column("Available", "availableCopies"));
        table.getColumns().add(column("Shelf", "shelfLocation"));
        table.getColumns().add(column("Status", "status"));
        VBox.setVgrow(table, Priority.ALWAYS);
        return table;
    }

    private <T> TableColumn<T, Object> column(String title, String property) {
        TableColumn<T, Object> col = new TableColumn<>(title);
        col.setCellValueFactory(new PropertyValueFactory<>(property));
        return col;
    }

    private void bookDialog(Book existing) {
        if (!sessionManager.canManageBooks()) {
            UiUtil.showError("Access denied", "Your role cannot modify catalog records.");
            return;
        }
        Dialog<Book> dialog = new Dialog<>();
        dialog.setTitle(existing == null ? "Add book" : "Edit book");
        dialog.getDialogPane().getButtonTypes().addAll(ButtonType.CANCEL, ButtonType.OK);
        TextField title = new TextField(existing == null ? "" : existing.getTitle());
        TextField author = new TextField(existing == null ? "" : existing.getAuthor());
        TextField isbn = new TextField(existing == null ? "" : existing.getIsbn());
        TextField category = new TextField(existing == null ? "" : existing.getCategory());
        Spinner<Integer> year = new Spinner<>(1400, java.time.LocalDate.now().getYear() + 1, existing == null ? 2024 : existing.getPublicationYear());
        Spinner<Integer> quantity = new Spinner<>(1, 200, existing == null ? 1 : existing.getQuantity());
        TextField shelf = new TextField(existing == null ? "" : existing.getShelfLocation());
        TextField cover = new TextField(existing == null ? "" : existing.getCoverImagePath());
        Button upload = new Button("Choose cover");
        upload.setOnAction(event -> {
            FileChooser chooser = new FileChooser();
            chooser.setTitle("Select book cover");
            File file = chooser.showOpenDialog(stage);
            if (file != null) cover.setText(file.getAbsolutePath());
        });
        GridPane grid = formGrid();
        grid.addRow(0, new Label("Title"), title);
        grid.addRow(1, new Label("Author"), author);
        grid.addRow(2, new Label("ISBN"), isbn);
        grid.addRow(3, new Label("Category"), category);
        grid.addRow(4, new Label("Publication year"), year);
        grid.addRow(5, new Label("Quantity"), quantity);
        grid.addRow(6, new Label("Shelf"), shelf);
        grid.addRow(7, new Label("Cover"), new HBox(8, cover, upload));
        grid.add(qrPreview(existing == null ? "NEW-BOOK" : existing.getIsbn()), 1, 8);
        dialog.getDialogPane().setContent(grid);
        dialog.setResultConverter(button -> {
            if (button == ButtonType.OK) {
                if (existing == null) {
                    return libraryService.addBook(title.getText(), author.getText(), isbn.getText(), category.getText(), year.getValue(), quantity.getValue(), shelf.getText(), cover.getText(), currentUser.getFullName());
                }
                existing.setTitle(title.getText());
                existing.setAuthor(author.getText());
                existing.setIsbn(isbn.getText());
                existing.setCategory(category.getText());
                existing.setPublicationYear(year.getValue());
                existing.setQuantity(quantity.getValue());
                existing.setShelfLocation(shelf.getText());
                existing.setCoverImagePath(cover.getText());
                libraryService.updateBook(existing, currentUser.getFullName());
                return existing;
            }
            return null;
        });
        try {
            dialog.showAndWait();
            showBooks();
            UiUtil.toast(root, "Book catalog updated.", "toast-success");
        } catch (IllegalArgumentException ex) {
            UiUtil.showError("Book validation", ex.getMessage());
        }
    }

    private GridPane formGrid() {
        GridPane grid = new GridPane();
        grid.setHgap(10);
        grid.setVgap(10);
        grid.setPadding(new Insets(16));
        return grid;
    }

    private GridPane qrPreview(String seed) {
        GridPane qr = new GridPane();
        qr.getStyleClass().add("qr");
        int hash = Math.abs(seed.hashCode());
        for (int y = 0; y < 9; y++) {
            for (int x = 0; x < 9; x++) {
                Rectangle r = new Rectangle(9, 9);
                boolean dark = ((hash >> ((x + y) % 16)) & 1) == 1 || (x < 2 && y < 2) || (x > 6 && y < 2) || (x < 2 && y > 6);
                r.setFill(dark ? Color.web("#111827") : Color.WHITE);
                qr.add(r, x, y);
            }
        }
        return qr;
    }

    private void showBorrowing() {
        VBox page = page("Borrowing & Returns", "Issue books, handle returns, detect overdue items, generate fines, and manage reservation queues.");
        ComboBox<Book> books = new ComboBox<>(FXCollections.observableArrayList(libraryService.allBooks()));
        books.setCellFactory(list -> bookCell());
        books.setButtonCell(bookCell());
        ComboBox<User> members = new ComboBox<>(FXCollections.observableArrayList(userService.members()));
        members.setCellFactory(list -> userCell());
        members.setButtonCell(userCell());
        Button issue = actionButton("Issue book", () -> {
            try {
                libraryService.borrowBook(books.getValue(), members.getValue(), currentUser.getFullName());
                notificationService.notify(members.getValue(), "Book issued", books.getValue().getTitle() + " is due in 14 days.", "SUCCESS");
                UiUtil.toast(root, "Borrowing created.", "toast-success");
                showBorrowing();
            } catch (RuntimeException ex) {
                UiUtil.showError("Borrowing error", ex.getMessage());
            }
        });
        Button reserve = actionButton("Reserve unavailable", () -> {
            try {
                libraryService.reserveBook(books.getValue(), members.getValue(), currentUser.getFullName());
                UiUtil.toast(root, "Reservation added.", "toast-success");
                showBorrowing();
            } catch (RuntimeException ex) {
                UiUtil.showError("Reservation error", ex.getMessage());
            }
        });
        HBox actions = new HBox(10, books, members, issue, reserve);
        TableView<Borrowing> table = borrowingTable(libraryService.allBorrowings());
        Button returns = actionButton("Return selected", () -> {
            Borrowing borrowing = table.getSelectionModel().getSelectedItem();
            if (borrowing == null) return;
            try {
                libraryService.returnBook(borrowing, currentUser.getFullName());
                UiUtil.toast(root, "Return completed.", "toast-success");
                showBorrowing();
            } catch (RuntimeException ex) {
                UiUtil.showError("Return error", ex.getMessage());
            }
        });
        page.getChildren().addAll(actions, returns, table);
        setContent(page);
    }

    private ListCell<Book> bookCell() {
        return new ListCell<>() {
            @Override protected void updateItem(Book item, boolean empty) {
                super.updateItem(item, empty);
                setText(empty || item == null ? "" : item.getTitle() + " (" + item.getAvailableCopies() + " available)");
            }
        };
    }

    private ListCell<User> userCell() {
        return new ListCell<>() {
            @Override protected void updateItem(User item, boolean empty) {
                super.updateItem(item, empty);
                setText(empty || item == null ? "" : item.getFullName());
            }
        };
    }

    private TableView<Borrowing> borrowingTable(List<Borrowing> data) {
        TableView<Borrowing> table = new TableView<>(FXCollections.observableArrayList(data));
        table.setColumnResizePolicy(TableView.CONSTRAINED_RESIZE_POLICY_ALL_COLUMNS);
        table.getColumns().add(column("Book", "bookTitle"));
        table.getColumns().add(column("Member", "memberName"));
        table.getColumns().add(column("Borrowed", "borrowDate"));
        table.getColumns().add(column("Due", "dueDate"));
        table.getColumns().add(column("Returned", "returnDate"));
        table.getColumns().add(column("Status", "status"));
        VBox.setVgrow(table, Priority.ALWAYS);
        return table;
    }

    private void showUsers() {
        VBox page = page("User & Staff Management", "Admin-only area for librarians, members, activation status, and secure role assignment.");
        TableView<User> table = new TableView<>(FXCollections.observableArrayList(userService.findAll()));
        table.setColumnResizePolicy(TableView.CONSTRAINED_RESIZE_POLICY_ALL_COLUMNS);
        table.getColumns().add(column("Name", "fullName"));
        table.getColumns().add(column("Email", "email"));
        table.getColumns().add(column("Role", "role"));
        table.getColumns().add(column("Active", "active"));
        Button add = actionButton("Add user", this::userDialog);
        Button toggle = actionButton("Activate / suspend", () -> {
            User user = table.getSelectionModel().getSelectedItem();
            if (user != null) {
                userService.toggleActive(user);
                UiUtil.toast(root, "User status updated.", "toast-success");
                showUsers();
            }
        });
        page.getChildren().addAll(new HBox(10, add, toggle), table);
        setContent(page);
    }

    private void userDialog() {
        Dialog<User> dialog = new Dialog<>();
        dialog.setTitle("Create account");
        dialog.getDialogPane().getButtonTypes().addAll(ButtonType.CANCEL, ButtonType.OK);
        TextField name = new TextField();
        TextField email = new TextField();
        PasswordField password = new PasswordField();
        ComboBox<Role> role = new ComboBox<>(FXCollections.observableArrayList(Role.values()));
        role.getSelectionModel().select(Role.MEMBER);
        GridPane grid = formGrid();
        grid.addRow(0, new Label("Full name"), name);
        grid.addRow(1, new Label("Email"), email);
        grid.addRow(2, new Label("Password"), password);
        grid.addRow(3, new Label("Role"), role);
        dialog.getDialogPane().setContent(grid);
        dialog.setResultConverter(button -> button == ButtonType.OK ? userService.createUser(name.getText(), email.getText(), password.getText(), role.getValue()) : null);
        try {
            dialog.showAndWait();
            showUsers();
        } catch (IllegalArgumentException ex) {
            UiUtil.showError("User validation", ex.getMessage());
        }
    }

    private void showMembers() {
        VBox page = page("Member Registry", "Librarian workflow for registering, reviewing, and supporting active student members.");
        TableView<User> table = new TableView<>(FXCollections.observableArrayList(userService.members()));
        table.setColumnResizePolicy(TableView.CONSTRAINED_RESIZE_POLICY_ALL_COLUMNS);
        table.getColumns().add(column("Member", "fullName"));
        table.getColumns().add(column("Email", "email"));
        table.getColumns().add(column("Active", "active"));
        page.getChildren().addAll(actionButton("Register member", this::memberDialog), table);
        setContent(page);
    }

    private void memberDialog() {
        Dialog<User> dialog = new Dialog<>();
        dialog.setTitle("Register member");
        dialog.getDialogPane().getButtonTypes().addAll(ButtonType.CANCEL, ButtonType.OK);
        TextField name = new TextField();
        TextField email = new TextField();
        PasswordField password = new PasswordField();
        password.setText("student123");
        GridPane grid = formGrid();
        grid.addRow(0, new Label("Full name"), name);
        grid.addRow(1, new Label("Email"), email);
        grid.addRow(2, new Label("Temporary password"), password);
        dialog.getDialogPane().setContent(grid);
        dialog.setResultConverter(button -> button == ButtonType.OK ? userService.createUser(name.getText(), email.getText(), password.getText(), Role.MEMBER) : null);
        try {
            dialog.showAndWait();
            showMembers();
        } catch (IllegalArgumentException ex) {
            UiUtil.showError("Member validation", ex.getMessage());
        }
    }

    private void showMyLibrary() {
        VBox page = page("My Library", "Personal borrowing history, due dates, overdue status, and fine visibility.");
        page.getChildren().addAll(new Label("Currently borrowed"), borrowingTable(libraryService.currentBorrowingsFor(currentUser)),
                new Label("Borrow history"), borrowingTable(libraryService.historyFor(currentUser)), finesTable(libraryService.finesFor(currentUser)));
        setContent(page);
    }

    private void showMyReservations() {
        VBox page = page("My Reservations", "Your reservation queue and availability alerts.");
        TableView<Reservation> table = reservationsTable(libraryService.reservationsFor(currentUser));
        page.getChildren().add(table);
        setContent(page);
    }

    private TableView<Reservation> reservationsTable(List<Reservation> reservations) {
        TableView<Reservation> table = new TableView<>(FXCollections.observableArrayList(reservations));
        table.setColumnResizePolicy(TableView.CONSTRAINED_RESIZE_POLICY_ALL_COLUMNS);
        table.getColumns().add(column("Book", "bookTitle"));
        table.getColumns().add(column("Member", "memberName"));
        table.getColumns().add(column("Date", "reservationDate"));
        table.getColumns().add(column("Status", "status"));
        return table;
    }

    private TableView<Fine> finesTable(List<Fine> fines) {
        TableView<Fine> table = new TableView<>(FXCollections.observableArrayList(fines));
        table.setColumnResizePolicy(TableView.CONSTRAINED_RESIZE_POLICY_ALL_COLUMNS);
        table.getColumns().add(column("Amount", "amount"));
        table.getColumns().add(column("Reason", "reason"));
        table.getColumns().add(column("Status", "status"));
        table.getColumns().add(column("Date", "createdDate"));
        return table;
    }

    private void showNotifications() {
        VBox page = page("Notifications", "Popup alerts, email-simulation notices, overdue warnings, and reservation availability messages.");
        Button broadcast = actionButton("Broadcast overdue reminder", () -> {
            notificationService.broadcast("Overdue reminder", "Please review due dates and return borrowed books on time.", "WARNING");
            UiUtil.toast(root, "Notification sent.", "toast-success");
            showNotifications();
        });
        VBox list = new VBox(10);
        for (LibraryNotification notification : notificationService.forUser(currentUser)) {
            VBox item = new VBox(4);
            item.getStyleClass().add("notification-item");
            item.getChildren().addAll(new Label(notification.getTitle()), new Label(notification.getMessage()));
            list.getChildren().add(item);
        }
        page.getChildren().addAll(broadcast, list);
        setContent(page);
    }

    private void showReports() {
        VBox page = page("Reports & Academic Deliverables", "Analytics, fines, top categories, printable report export, and presentation artifacts.");
        Button report = actionButton("Generate PDF report", () -> {
            try {
                Path output = Path.of("smart-library-report.pdf");
                reportService.generatePdfLikeReport(output);
                UiUtil.showInfo("Report generated", "Report saved to " + output.toAbsolutePath());
            } catch (IOException ex) {
                UiUtil.showError("Report error", ex.getMessage());
            }
        });
        page.getChildren().addAll(report, finesTable(libraryService.allFines()), reservationsTable(libraryService.allReservations()));
        setContent(page);
    }

    private void showLogs() {
        VBox page = page("System Logs", "Security and activity audit trail for administration and evaluation.");
        TableView<ActivityLog> table = new TableView<>(FXCollections.observableArrayList(libraryService.logs()));
        table.setColumnResizePolicy(TableView.CONSTRAINED_RESIZE_POLICY_ALL_COLUMNS);
        table.getColumns().add(column("Actor", "actor"));
        table.getColumns().add(column("Action", "action"));
        table.getColumns().add(column("Details", "details"));
        table.getColumns().add(column("Date", "createdAt"));
        page.getChildren().add(table);
        setContent(page);
    }

    private void exportCsv() {
        try {
            Path path = Path.of("books-export.csv");
            libraryService.exportBooksCsv(path);
            UiUtil.showInfo("CSV exported", "Catalog exported to " + path.toAbsolutePath());
        } catch (IOException ex) {
            UiUtil.showError("Export error", ex.getMessage());
        }
    }

    private void logout() {
        if (!UiUtil.confirm("Logout confirmation", "Do you want to end the current session?")) return;
        notificationService.notify(currentUser, "Logout", "Session closed successfully.", "INFO");
        sessionManager.logout();
        LoginController login = new LoginController(stage, userService, libraryService, notificationService, reportService, sessionManager);
        stage.getScene().setRoot(login.getView());
    }
}
